# src/main/java/com/techindna/springbootjwttemplate/entity/GeoIpResponse.java
@@ -1,0 +1,14 @@
+package com.techindna.springbootjwttemplate.entity;
+
+public record GeoIpResponse(
+    String ip,
+    String city,
+    String country,
+    String countryCode,
+    String continent,
+    String subdivision,
+    String postalCode,
+    String timezone,
+    double latitude,
+    double longitude
+) {}
